# mnl-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/actions/install-deps/: action.yml
.github/workflows/: build-and-test.yml  cargo-shear.yml  check-semver.yml  linting.yml
mnl/: Cargo.toml
mnl-sys/: Cargo.toml  README.md  build.rs  generate_bindings.sh
mnl-sys/src/: bindings.rs  lib.rs
mnl/src/: callback.rs  cvt.rs  lib.rs  messages.rs  socket.rs
