[package]
name = "mnl-sys"
version = "0.2.1"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
description = "Low level FFI bindings to libmnl. A minimalistic user-space library oriented to Netlink developers"
repository = "https://github.com/mullvad/mnl-rs"
readme = "README.md"
keywords = ["netlink", "libmnl"]
categories = ["network-programming", "os::unix-apis", "external-ffi-bindings", "no-std"]
edition = "2018"
rust-version = "1.38"
links = "mnl"

[badges]
travis-ci = { repository = "mullvad/mnl-rs" }

[features]
mnl-1-0-4 = []

[dependencies]
libc = "0.2.41"

[build-dependencies]
pkg-config = "0.3.16"
