[package]
name = "mnl"
version = "0.3.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
description = "Safe abstraction for libmnl, a minimalistic user-space library oriented to Netlink developers"
repository = "https://github.com/mullvad/mnl-rs"
readme = "../README.md"
keywords = ["netlink", "libmnl"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]
edition = "2024"
rust-version = "1.85"

[badges]
travis-ci = { repository = "mullvad/mnl-rs" }

[features]
mnl-1-0-4 = ["mnl-sys/mnl-1-0-4"]

[dependencies]
libc = "0.2.40"
log = "0.4.4"
mnl-sys = { path = "../mnl-sys", version = "0.2.2" }
